# astro--the-space-expo

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
Space expo/: CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  OPTIMIZATION_REPORT.md  README.md  docker-compose.yml  performance_comparison.py  pyproject.toml  requirements.txt  test_optimization.py
Space expo/app/: streamlit_app.py  streamlit_app_optimized.py
Space expo/notebooks/: README.md
Space expo/src/: __init__.py
Space expo/src/orbits/: __init__.py  pass_predictor.py  pass_predictor_optimized.py
Space expo/tests/: __init__.py  test_pass_predictor.py
app/: streamlit_app.py  streamlit_app_optimized.py
docs/: CHANGELOG.md  OPTIMIZATION_REPORT.md  README.md
notebooks/: README.md
src/: __init__.py  performance_comparison.py  test_optimization.py
src/orbits/: __init__.py  pass_predictor.py  pass_predictor_optimized.py
tests/: __init__.py  test_pass_predictor.py
